--- a/projectproposal.html
+++ b/projectproposal.html
@@ -30,17 +30,17 @@
       <br>
 
       <h2>Anticipated Bill of Materials</h2>
-        Arduino Uno (for controlling the timer and LED color changes)
+        - Arduino Uno (for controlling the timer and LED color changes)
         <br>
-        Breadboard + wires (for wiring my circuit)
+        - Breadboard + wires (for wiring my circuit)
         <br>
-        RGB LEDs (for displaying different colors for focus/breaks)
+        - RGB LEDs (for displaying different colors for focus/breaks)
         <br>
-        Push Button (for starting and resetting the timer)
+        - Push Button (for starting and resetting the timer)
         <br>
-        Resistors (220/100/10k) (for controlling current & voltage of RGB LED and push button)
+        - Resistors (220/100/10k) (for controlling current & voltage of RGB LED and push button)
         <br>
-        Translucent/frosted jar and container (for enclosing, diffusing, and hiding the components)
+        - Translucent/frosted jar and container (for enclosing, diffusing, and hiding the components)
       <br>
       <br>
 
