add more bullets

--- a/projectproposal.html
+++ b/projectproposal.html
@@ -64,13 +64,13 @@
       <br>
 
       <h2>Contingency Plans</h2>
-        If something goes wrong with the timer code, I will simplify the operation to manually switching colors with the button.
+        - If something goes wrong with the timer code, I will simplify the operation to manually switching colors with the button.
         <br>
-        If the RGB LEDs are not working properly, I will use separate-single color LEDs for each phase.
+        - If the RGB LEDs are not working properly, I will use separate-single color LEDs for each phase.
         <br>
-        If the button input is glitching, I will debug or find a workaround in code or use a different input method.
+        - If the button input is glitching, I will debug or find a workaround in code or use a different input method.
         <br>
-        If something goes wrong with the jar and container, I will use a temporary disposable enclosure.
+        - If something goes wrong with the jar and container, I will use a temporary disposable enclosure.
 
       <br>
       <br>
