--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
       </div>
 
       <div class="assignment">
-        <a href="a2.html">
-          <h2>A5: High(er) voltage and transistors!</h2>
-          
+        <a href="projectproposal.html">
+          <h2>Final Project Proposal!</h2>
+          <img src="lumo-proposal.jpg" />
         </a>
-        <p>Assignment 5 was High(er) voltage and transistors!</p>
+        <p>My final project is Lumo!</p>
       </div>
 
       <div class="assignment">
