--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       <div class="assignment">
         <a href="projectproposal.html">
           <h2>Final Project Proposal!</h2>
-          <img src="lumo-proposal.jpg" />
+          <img src="lumo-drawing.jpg" />
         </a>
         <p>My final project is Lumo!</p>
       </div>
