--- a/projectproposal.html
+++ b/projectproposal.html
@@ -12,7 +12,10 @@
     <h1>Lumo!</h1>
     <div class="header">
       
-      <p>By Emi Nakata
+      <p>
+        By Emi Nakata
+        <br>
+        Link to my proposal presentation video: https://drive.google.com/file/d/1zTbKOgLmdEzqYLMshRkHf3oY5eYZu5Gy/view?usp=sharing
         <br>
         <br>
       </p>
