--- a/projectproposal.html
+++ b/projectproposal.html
@@ -15,7 +15,12 @@
       <p>
         By Emi Nakata
         <br>
-        Link to my proposal presentation video: https://drive.google.com/file/d/1zTbKOgLmdEzqYLMshRkHf3oY5eYZu5Gy/view?usp=sharing
+        <br>
+        Link to my proposal presentation video: 
+        <br>
+        <a href="https://drive.google.com/file/d/1zTbKOgLmdEzqYLMshRkHf3oY5eYZu5Gy/view?usp=sharing">
+            Watch here
+        </a>
         <br>
         <br>
       </p>
