--- a/a5.html
+++ b/a5.html
@@ -20,7 +20,7 @@
     </div>
     <div class="content">
       <h2>My Schematic</h2>
-      <img src="a4-schematic.jpg" width="700" height="450"/>
+      <img src="" width="700" height="450"/>
       Image of my schematic with labeled components, including...
       <br>
       <br>
@@ -31,7 +31,7 @@
       <br>
 
       <h2>My Circuit</h2>
-      <img src="a4-circuit.jpg" width="440" height="550"/>
+      <img src="" width="440" height="550"/>
       Image of my physical circuit, "High(er) voltage and transistors!", with all components connected.
       <br>
       <br>
@@ -47,7 +47,7 @@
 
       <h2>My Circuit's Operation</h2>
       <video controls width="600" height="350">
-        <source src="a4-circuit-video.mp4" type="video/mp4">
+        <source src="" type="video/mp4">
       Your browser does not support the video tag.
       </video>
       Video of my circuit in operation, with...
