--- a/index.html
+++ b/index.html
@@ -56,6 +56,15 @@
         <p>Assignment 4 was Libraries!</p>
       </div>
 
+
+      <div class="assignment">
+        <a href="a5.html">
+          <h2>A5: High(er) voltage and transistors!</h2>
+          <img src="" />
+        </a>
+        <p>Assignment 5 was High(er) voltage and transistors!</p>
+      </div>
+
       <div class="assignment">
         <a href="projectproposal.html">
           <h2>Final Project Proposal!</h2>
@@ -64,13 +73,6 @@
         <p>My final project is Lumo!</p>
       </div>
 
-      <div class="assignment">
-        <a href="a3.html">
-          <h2>A6: Talking to the web!</h2>
-          
-        </a>
-        <p>Assignment 6 was Talking to the web!</p>
-      </div>
     </div>
 
   </body>
