--- a/index.html
+++ b/index.html
@@ -75,5 +75,33 @@
 
     </div>
 
+    <div class="grid">
+      <div class="assignment">
+        <a href="a4.html">
+          <h2>A4: Libraries!</h2>
+          <img src="a4-circuit.jpg" />
+        </a>
+        <p>Assignment 4 was Libraries!</p>
+      </div>
+
+
+      <div class="assignment">
+        <a href="a5.html">
+          <h2>A5: High(er) voltage and transistors!</h2>
+          <img src="" />
+        </a>
+        <p>Assignment 5 was High(er) voltage and transistors!</p>
+      </div>
+
+      <div class="assignment">
+        <a href="projectproposal.html">
+          <h2>Final Project Proposal!</h2>
+          <img src="lumo-drawing.jpg" />
+        </a>
+        <p>My final project is Lumo!</p>
+      </div>
+
+    </div>
+
   </body>
 </html>
