--- a/index.html
+++ b/index.html
@@ -67,10 +67,10 @@
 
       <div class="assignment">
         <a href="projectproposal.html">
-          <h2>Final Project Proposal!</h2>
-          <img src="lumo-drawing.jpg" />
+          <h2>A6: Talking to the web!</h2>
+          <img src="" />
         </a>
-        <p>My final project is Lumo!</p>
+        <p>Assignment 6 was Talking to the web!</p>
       </div>
 
     </div>
@@ -78,19 +78,19 @@
     <div class="grid">
       <div class="assignment">
         <a href="a4.html">
-          <h2>A4: Libraries!</h2>
-          <img src="a4-circuit.jpg" />
+          <h2>Blank!</h2>
+          <img src="" />
         </a>
-        <p>Assignment 4 was Libraries!</p>
+        <p>Blank!</p>
       </div>
 
 
       <div class="assignment">
         <a href="a5.html">
-          <h2>A5: High(er) voltage and transistors!</h2>
+          <h2>Blank!</h2>
           <img src="" />
         </a>
-        <p>Assignment 5 was High(er) voltage and transistors!</p>
+        <p>Blank!</p>
       </div>
 
       <div class="assignment">
