--- a/index.html
+++ b/index.html
@@ -86,11 +86,11 @@
       </div>
       
       <div class="assignment">
-        <a href="a4.html">
-          <h2>Blank!</h2>
+        <a href="finalproject.html">
+          <h2>Final Project Documentation!</h2>
           <img src="" />
         </a>
-        <p>Blank!</p>
+        <p>Documentation for my final project, Lumo!</p>
       </div>
 
 
