--- a/a5.html
+++ b/a5.html
@@ -26,7 +26,9 @@
       <br>
 
       <h2>Resistance Values</h2>
-      
+      I used 1M ohm resistors for the capacitive touch sensors because they provide low sensitivity, but fast response readings. 
+      It works well for my circuit's operation since I want the motor to adapt quickly when a capacitive touch is detected, 
+      without being too sensitive to false touches.
       <br>
       <br>
 
