--- a/a5.html
+++ b/a5.html
@@ -172,10 +172,10 @@
 
       <h2>My Circuit's Operation</h2>
       <video controls width="600" height="350">
-        <source src="" type="video/mp4">
+        <source src="a5-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-      Video of my circuit in operation, with...
+      Video of my circuit in operation, with capacitive touch sensors controlling the motor and its speed.
       <br>
       <br>
 
