add circuit photo

--- a/a5.html
+++ b/a5.html
@@ -33,7 +33,7 @@
       <br>
 
       <h2>My Circuit</h2>
-      <img src="" width="440" height="550"/>
+      <img src="a5-circuit.jpg" width="440" height="550"/>
       Image of my physical circuit, "High(er) voltage and transistors!", with all components connected.
       <br>
       <br>
