--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <div class="assignment">
         <a href="a5.html">
           <h2>A5: High(er) voltage and transistors!</h2>
-          <img src="" />
+          <img src="a5-circuit.jpg" />
         </a>
         <p>Assignment 5 was High(er) voltage and transistors!</p>
       </div>
