--- a/a5.html
+++ b/a5.html
@@ -21,7 +21,9 @@
     <div class="content">
       <h2>My Schematic</h2>
       <img src="" width="700" height="450"/>
-      Image of my schematic with labeled components, including...
+      Image of my schematic with labeled components, 
+      including pins (send and receive), resistors, capacitive sensor wires, diode, 
+      transistor, motor, external power source, alligator clips, and ground.
       <br>
       <br>
 
