--- a/a5.html
+++ b/a5.html
@@ -188,7 +188,7 @@
         What is the absolute maximum amount of current between pins 2 and 3?
         <br>
         <br>
-        Answer 
+        For the n-mosfet transistor, the absolute maximum amount of current between pin 2 (drain) and pin 3 (source) is 37.2 A continuously or 80 A pulsed.
         <br>
         <br>
 
