--- a/a5.html
+++ b/a5.html
@@ -23,7 +23,7 @@
       <img src="a5-schematic.jpg" width="700" height="500"/>
       Image of my schematic with labeled components, 
       including pins (send and receive), resistors, capacitive sensor wires, diode, 
-      transistor, motor, external power source, alligator clips, and ground.
+      transistor, motor, external power source, and ground.
       <br>
       <br>
 
