--- a/a5.html
+++ b/a5.html
@@ -215,7 +215,7 @@
         If no, you can either leave this question blank, or provide other information if you'd like.
         <br>
         <br>
-        Answer
+        No, I did not use AI tools in completing this assignment.
       </p>
 
     </div>
