transistor current justification

--- a/a5.html
+++ b/a5.html
@@ -34,6 +34,14 @@
       <br>
       <br>
 
+      <h2>Transistor Current Justification</h2>
+      The n-mosfet transistor (DMT6009LCT) I used can handle a maximum continuous current of 37.2 A between its drain and source pins.
+      My DC motor operates at 12 V and draws a maximum efficiency current of 0.11 A and a stall current of 0.35 A, 
+      so the currents from my motor are well within the transistor's limits.
+      This ensures that the transistor can safely switch the motor on and off without risk of overheating or damage.
+      <br>
+      <br>
+
       <h2>My Circuit</h2>
       <img src="a5-circuit.jpg" width="440" height="550"/>
       Image of my physical circuit, "High(er) voltage and transistors!", with all components connected.
@@ -177,7 +185,7 @@
         <source src="a5-video.mp4" type="video/mp4">
       Your browser does not support the video tag.
       </video>
-      Video of my circuit in operation, with capacitive touch sensors controlling the motor and its speed.
+      Video of my circuit in operation, with capacitive touch sensors (input) controlling the motor (output) and its speed.
       <br>
       <br>
 
