--- a/a5.html
+++ b/a5.html
@@ -204,7 +204,7 @@
         Find parts with datasheets you could use for each of these schematic components.
         <br>
         <br>
-        Answer
+        <img src="a5-q2.jpg" width="440" height="550"/>
         <br>
         <br>
 
