--- a/a5.html
+++ b/a5.html
@@ -214,7 +214,7 @@
         then one forward one back, and one back then forward.
         <br>
         <br>
-        Answer
+        <img src="a5-q3.jpg" width="600" height="400"/>
         <br>
         <br>
 
