--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <div class="assignment">
-        <a href="projectproposal.html">
+        <a href="a6.html">
           <h2>A6: Talking to the web!</h2>
           <img src="" />
         </a>
