--- a/class_motor_example.html
+++ b/class_motor_example.html
@@ -20,6 +20,6 @@
     </style>
   </head>
   <body>
-    <script src="class_motor_example.html"></script>
+    <script src="class_motor_example.js"></script>
   </body>
 </html>
