--- a/a6.html
+++ b/a6.html
@@ -136,6 +136,13 @@
         </pre>
       <br>
 
+      <h2>My Webpage's p5.js Code</h2>
+        <pre><code>
+        
+        </code>
+        </pre>
+      <br>
+
       <h2>My Circuit's Operation</h2>
       <video controls width="600" height="350">
         <source src="a5-video.mp4" type="video/mp4">
