--- a/a6.html
+++ b/a6.html
@@ -20,7 +20,7 @@
     </div>
     <div class="content">
       <h2>My Schematic</h2>
-      <img src="" width="700" height="500"/>
+      <img src="a6-schematic.jpg" width="700" height="500"/>
       Image of my schematic with labeled components, 
       including pins (input and output), resistors, pushbuttons, joystick, RGB LED, 
       power source, and ground.
