--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="assignment">
         <a href="a6.html">
           <h2>A6: Talking to the web!</h2>
-          <img src="" />
+          <img src="a6-circuit.jpg" />
         </a>
         <p>Assignment 6 was Talking to the web!</p>
       </div>
